--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "animate.css": "3.5.2",
         "animejs": "^2.0.1",
-        "axios": "^0.15.3",
+        "axios": "^0.17",
         "bulma": "^0.3.2",
         "font-awesome": "4.7.0",
         "mdi": "^1.8.36",
@@ -104,6 +104,8 @@
         "webpack": "^2.2.1",
         "webpack-dev-middleware": "^1.9.0",
         "webpack-hot-middleware": "^2.14.0",
-        "webpack-merge": "^3.0.0"
+        "webpack-merge": "^3.0.0",
+        "@websanova/vue-auth": "^2.21.1-beta",
+        "vue-axios": "^2.0.2"
     }
 }
